# time-series

./: .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
src/time_series/: analysis.py  app.py  preprocessing.py  validation.py
tests/: exploratory_analysis.ipynb
