[tool.poetry]
name = "time-series"
version = "0.1.0"
description = ""
authors = ["Omar Amer"]
readme = "README.md"
packages = [{include = "time_series", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
ipykernel = "^6.27.1"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
statsmodels = "^0.14.1"


[tool.poetry.group.dev.dependencies]
nbformat = "^5.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
